fix wrapped text

--- a/src/components/request-creator3/request-creator3.module.scss
+++ b/src/components/request-creator3/request-creator3.module.scss
@@ -63,7 +63,7 @@
 }
 
 .radio_container_container_text {
-  margin: 0 0 0 7px;
+  margin: 0 0 0 1px;
 }
 
 .reward_text {
